rmk-macro/tests/compile_fail/input_processor_invalid_subscribe_element.rs
use rmk_macro::input_processor;

pub struct InputEvent;

#[input_processor(subscribe = [InputEvent, 123])]
pub struct BadInputProcessor;

fn main() {}
